--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@types/node": "12.0.2",
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-dates": "^20.2.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "styled-components": "^4.2.0",
@@ -36,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dates": "^17.1.5",
     "@types/styled-components": "^4.1.15",
     "tslint": "^5.16.0",
     "tslint-config-airbnb": "^5.11.1"
